# copilot

./: .company_vdata.db  .gitignore  README.md  README_COMPANY.md  company_provenance.jsonl  copilot-company  copilot-company.cmd  plugin.json  pyproject.toml
.copilot/: plugin.json
agents/: README.md
docs/: CONTRIBUTING.md
examples/: team.yaml
skills/: README.md
src/company/: __init__.py  cli.py  db.py  models.py  provenance.py
src/company_copilot.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: test_smoke_cli.py
