[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "company-copilot"
version = "0.1.0"
description = "Company plugin for Copilot CLI (pair-first agent teams)"
readme = "README_COMPANY.md"
requires-python = ">=3.10"
authors = [ { name = "Copilot" } ]
dependencies = [
  "click>=8.0",
  "PyYAML>=6.0",
  "SQLAlchemy>=1.4"
]

[project.scripts]
copilot-company = "company.cli:cli"
